# game-of-life

./: Cargo.toml
benches/: simulation.rs
src/: canonical.rs  conway.rs  lib.rs  main.rs  orchestration.rs  startup.rs
src/mfrac/: mfrac.rs
src/mfroc/: mod.rs  pipeline.rs
src/persistence/: database.rs  mod.rs
src/types/: cell_configuration.rs  cell_coord.rs  mfrac_report.rs  mod.rs  simulation_state.rs
src/ui/: app.rs
src/visualization/: stats.rs
